@@ -11,6 +11,7 @@ procps-ng-NEXT
   * pmap: Reset totals between processes                   issue #298
   * ps: fixed missing or corrupted fields with -m option   Debian #1036631, issue #279
   * ps: Fix buffer overflow in -C option CVE-2023-4016     Debian #1042887, issue #297
+  * ps: Add --signames to show signal names in masks       merge #98
   * sysctl: -N show names                                  merge #198, RH #2222056
   * tests: dont compare floats with ==                     issue #271
   * tests: skips tests if maps missing                     merge #197, Gentoo #583036
